[package]
name = "rustcraft"
version = "0.1.0"
edition = "2021"

[dependencies]
winit = { version = "0.30", features = ["serde"] }
raw-window-handle = "0.6"
ash = { version = "0.38", default-features = false, features = ["linked"] }
ash-window = "0.13"
nalgebra = "0.32"
image = "0.25"
bytemuck = { version = "1", features = ["derive"] }
log = "0.4"
env_logger = "0.11"
gpu-allocator = "0.28"
rayon = "1.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
fontdue = "0.9"
flate2 = "1"
rodio = "0.19"
zip = "2"
reqwest = { version = "0.12", features = ["blocking", "json"] }
base64 = "0.22"
sha2 = "0.10"
rand = "0.8"
aes = "0.8"
rsa = "0.9"
sha1 = "0.10"
fnv = "1.0.7"
mlua = { version = "0.11", features = ["lua54", "vendored", "serialize"] }
gilrs = "0.11"
shaderc = "0.10"
hecs = "0.11"
parking_lot = "0.12"
arc-swap = "1.7"
smallvec = { version = "1.13", features = ["const_generics"] }

[features]
default = []
anti-cheat = []

[build-dependencies]
shaderc = "0.10"
embed-resource = "2.3"

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"
strip = true
